`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

*******************************************************************************
2.4.5

2003-10-14    <layer@HOBART>

	* fi-subproc.el (fi::read-file-name): bug9125: fix long standing
	  annoyance of bogus dxl input in minibuffer
	* fi-subproc.el (fi::set-environment-use-process-environment):
	  bug8802: avoid SHELL as set by Emacs on NT/2k, since it doesn't
	  work well with run-shell-command

*******************************************************************************
2.4.4

2003-10-13  Kevin Layer  <layer@crikey>

	* fi-lze.el: rfe5674: for print correct file position in eli
	  incremental compile warnings solution on the lisp side

*******************************************************************************
2.4.3

2003-10-13    <layer@HOBART>

    for rfe5678: change emacs-lisp rendezvous on windows to be more like *NIX
>>>	* fi-subproc.el: lots of changes to make eli startup on windows
	  more like *NIX; also made remote startups of *NIX lisps on
	  windows emacs work--built-in win2k rsh.exe seems to work, as
	  does Cygwin rsh.exe.  fi:connect-to-windows is gone, since it's
	  not needed anymore.
	* fi-sublisp.el: see above
	* fi-utils.el: support for above; added fi::probe-file;
	  fi::file-contents now kills buffer after it's done

*******************************************************************************
2.4.2

2003-10-08  Kevin Layer  <layer@crikey>

	* fi-utils.el
	- (fi::prin1-to-string-mule): bug8475
	- move regexp string into variable so fi-lep.el can use it
	* fi-lep.el
	- (fi::translate-putative-logical-pathname): bug8953
	- (fi::full-package-name): bug8801
	- (fi:lisp-complete-symbol): bug7874

*******************************************************************************
join from acl62 to trunk on 9/29/03
command: